🌈style( ): fix partners section on mobiles

--- a/style/index.css
+++ b/style/index.css
@@ -5,7 +5,6 @@
 }
 :root {
     --blue: #0e8ef1;
-    /* --light-blue: ; */
     --dark-blue: #0c54a0;
     --milky-white: #fafafa;
     --white: #ffffff;
@@ -260,16 +259,14 @@ body {
     color: #c4c4c4;
     background-color: #000;
 }
-
+/* MEDIA QUERIES */
 @media (max-width: 1300px) {
     .header__nav > a {
         font-size: 1rem;
     }
-
     .main-info__text {
         width: 80%;
     }
-
     .service__body {
         grid-template-rows: 1fr 1fr 1fr 1fr;
         grid-template-columns: 1fr 1fr;
@@ -279,12 +276,17 @@ body {
         width: 40rem;
         height: 25rem;
     }
+    .partners__img {
+        width: 18rem;
+    }
+    .partners__img:hover {
+        width: 22rem;
+    }
 }
 @media (max-width: 700px) {
     .section-title {
         font-size: 3rem;
     }
-
     .main-info__text {
         margin: 0;
         font-size: 1.7rem;
@@ -292,7 +294,6 @@ body {
     .main-info__logo {
         width: 17rem;
     }
-
     .service {
         padding: 1rem;
     }
@@ -310,12 +311,17 @@ body {
     .service__icon > .service__icon_man {
         width: 4rem;
     }
-
+    .partners__body {
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .partners__img:hover {
+        width: 24rem;
+    }
     .clients__item {
         width: 33rem;
         height: 20rem;
     }
-
     .feedback {
         padding-bottom: 4rem;
     }
@@ -328,15 +334,12 @@ body {
         width: 25rem;
         height: 15rem;
     }
-
     .main-info__text {
         width: 90%;
     }
-
     .header {
         margin-bottom: 1rem;
     }
-
     .footer__copyright {
         font-size: 1rem;
     }
@@ -348,25 +351,30 @@ body {
     .section-title {
         font-size: 2rem;
     }
-
     .main-info__text {
         font-size: 1.3rem;
     }
     .main-info__logo {
         width: 15rem;
     }
-
+    .partners__body {
+        justify-content: space-around;
+    }
+    .partners__img {
+        width: 14rem;
+    }
+    .partners__img:hover {
+        width: 18rem;
+    }
     .clients__item {
         width: 18rem;
         height: 12rem;
     }
-
     .feedback__input {
         padding: 0.8rem;
         font-size: 1rem;
         width: 80vw;
     }
-
     .footer__copyright {
         font-size: 0.8rem;
     }
